adicionado arquivos de treino e agenda

--- a/app.kv
+++ b/app.kv
@@ -173,7 +173,7 @@
                 text_size: self.size
 
             Button:
-                text: 'Registre-se agora'
+                text: 'Registre-se agora:'
                 size_hint_y: None
                 height: 45
                 font_size: 15
