--- a/welcome.kv
+++ b/welcome.kv
@@ -5,7 +5,7 @@
         spacing: 20
 
         Label:
-            text: 'Bem-vindo ao App!'
+            text: 'Bem-vindo ao Bom de Bola!'
             font_size: 26
             bold: True
             color: 1,1,1,1
