modificaçõe no arquivo registro

--- a/welcome.kv
+++ b/welcome.kv
@@ -17,7 +17,6 @@
             padding: 5
             spacing: 10
 
-
             Label:
                 text: '   Olá Amigo Bom de Bola'
                 font_size: '28sp'
@@ -71,7 +70,7 @@
                     pos: self.parent.pos
 
                     AsyncImage:
-                        source: "C:/Users/Pichau/Desktop/Pi_4_Projeto_Bom_de_Bola/images/registrar - Copia.png"
+                        source:"C:/Users/Pichau/Desktop/APP_PI_4/images/registrar.png"
                         size_hint: 0.6, 0.6
                         pos_hint: {"center_x": 0.5}
 
@@ -106,7 +105,8 @@
                     pos: self.parent.pos
 
                     AsyncImage:
-                        source: "C:/Users/Pichau/Desktop/Pi_4_Projeto_Bom_de_Bola/images/agenda - Copia.png"
+                        # CORRIGIDO: use / em vez de \
+                        source: "C:/Users/Pichau/Desktop/APP_PI_4/images/agenda.png"
                         size_hint: 0.6, 0.6
                         pos_hint: {"center_x": 0.5}
 
